k3s/changedetector-io/deployments.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: changedetector
  namespace: changedetector-io
  labels:
    app: changedetector-io
spec:
  serviceName: changedetector-io
  replicas: 1
  selector:
    matchLabels:
      app: changedetector-io
  template:
    metadata:
      labels:
        app: changedetector-io
    spec:
      hostname: changedetector-io
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: rpi-type
                    operator: In
                    values:
                      - "4"
      containers:
        - name: changedetector-io
          image: ghcr.io/dgtlmoon/changedetection.io
          imagePullPolicy: "Always"
          ports:
            - name: http-chdtr-io
              containerPort: 5000
          volumeMounts:
            - name: changedetector-io-volume
              mountPath: /datastore
          resources:
            limits:
              cpu: "300m"
              memory: "75Mi"

        - name: browserless
          image: seleniarm/standalone-chromium:latest
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm

      volumes:
        - name: changedetector-io-volume
          persistentVolumeClaim:
            claimName: changedetector-pv-claim
        - name: dshm
          emptyDir:
            medium: Memory
